[gd_scene load_steps=2 format=3 uid="uid://j8ncvakn9p322"]

[ext_resource type="Script" path="res://algorithms/datastructures/binary_trees/BinaryTrees.gd" id="1_binary_trees"]

[node name="BinaryTrees" type="Node3D"]
script = ExtResource("1_binary_trees")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 12, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.5

[node name="TreeNodes" type="Node3D" parent="."]

[node name="TreeEdges" type="Node3D" parent="."]

[node name="TraversalIndicator" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -4, 0)
size = Vector3(0.5, 1, 0.2)

[node name="HeightIndicator" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -4, 0)
top_radius = 0.2
bottom_radius = 0.2
height = 1.0

[node name="RootMarker" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
top_radius = 0.0
bottom_radius = 0.3
height = 0.5
